# high-cut

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: process_bench.rs
src/: config.rs  ffmpeg.rs  lib.rs  main.rs  processor.rs
